Refactor createProducts to remove redundant status code Refactor productsRoutes to remove unnecessary middleware Update summary and example data in Swagger documentation
