# swagger.json
@@ -426,7 +426,7 @@
 
     "/products": {
       "post": {
-        "summary": "Criar um novo produto",
+        "summary": "Create a new product - (Admin)",
         "tags": ["Product"],
         "security": [
           {
@@ -442,11 +442,11 @@
                 "properties": {
                   "name": {
                     "type": "string",
-                    "example": "Produto Exemplo"
+                    "example": "Sample Product"
                   },
                   "description": {
                     "type": "string",
-                    "example": "Produto Exemplo"
+                    "example": "Sample Product Description"
                   },
                   "price": {
                     "type": "number",
@@ -467,12 +467,12 @@
         },
         "responses": {
           "200": {
-            "description": "Produto criado com sucesso",
+            "description": "Product successfully created",
             "content": {
               "application/json": {
                 "example": {
                   "id": 1,
-                  "name": "Produto Exemplo",
+                  "name": "Sample Product",
                   "price": 99.99,
                   "tags": "tag1,tag2"
                 }
@@ -480,18 +480,13 @@
             }
           },
           "401": {
-            "description": "Não autorizado"
+            "description": "Unauthorized"
           }
         }
       },
       "get": {
-        "summary": "Listar produtos",
+        "summary": "List products",
         "tags": ["Product"],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
         "parameters": [
           {
             "name": "skip",
@@ -500,12 +495,12 @@
               "type": "integer",
               "example": 0
             },
-            "description": "Número de resultados a pular"
+            "description": "Number of results to skip"
           }
         ],
         "responses": {
           "200": {
-            "description": "Lista de produtos",
+            "description": "List of products",
             "content": {
               "application/json": {
                 "example": {
@@ -513,13 +508,13 @@
                   "data": [
                     {
                       "id": 1,
-                      "name": "Produto Exemplo",
+                      "name": "Sample Product",
                       "price": 99.99,
                       "tags": "tag1,tag2"
                     },
                     {
                       "id": 2,
-                      "name": "Outro Produto",
+                      "name": "Another Product",
                       "price": 199.99,
                       "tags": "tag3,tag4"
                     }
@@ -527,16 +522,14 @@
                 }
               }
             }
-          },
-          "401": {
-            "description": "Não autorizado"
           }
         }
       }
     },
+
     "/products/multiple": {
       "post": {
-        "summary": "Criar múltiplos produtos",
+        "summary": "Create multiple products - (Admin)",
         "tags": ["Product"],
         "security": [
           {
@@ -554,57 +547,78 @@
                   "properties": {
                     "name": {
                       "type": "string",
-                      "example": "Produto Exemplo"
+                      "example": "Clean Code"
                     },
-                    "price": {
-                      "type": "number",
-                      "example": 99.99
+                    "description": {
+                      "type": "string",
+                      "example": "A handbook of agile software craftsmanship."
                     },
                     "tags": {
                       "type": "array",
                       "items": {
                         "type": "string"
                       },
-                      "example": ["tag1", "tag2"]
+                      "example": ["Programming", "Agile", "Best Practices"]
+                    },
+                    "price": {
+                      "type": "number",
+                      "example": 32.99
                     }
                   },
                   "required": ["name", "price", "tags"]
                 }
-              }
+              },
+              "example": [
+                {
+                  "name": "Clean Code",
+                  "description": "A handbook of agile software craftsmanship.",
+                  "tags": ["Programming", "Agile", "Best Practices"],
+                  "price": 32.99
+                },
+                {
+                  "name": "The Mythical Man-Month",
+                  "description": "Essays on software engineering.",
+                  "tags": ["Software Engineering", "Essays", "Classic"],
+                  "price": 28.0
+                }
+              ]
             }
           }
         },
         "responses": {
           "201": {
-            "description": "Produtos criados com sucesso",
+            "description": "Products successfully created",
             "content": {
               "application/json": {
                 "example": [
                   {
                     "id": 1,
-                    "name": "Produto 1",
-                    "price": 99.99,
-                    "tags": "tag1,tag2"
+                    "name": "Clean Code",
+                    "description": "A handbook of agile software craftsmanship.",
+                    "tags": ["Programming", "Agile", "Best Practices"],
+                    "price": 32.99
                   },
                   {
                     "id": 2,
-                    "name": "Produto 2",
-                    "price": 199.99,
-                    "tags": "tag3,tag4"
+                    "name": "The Mythical Man-Month",
+                    "description": "Essays on software engineering.",
+                    "tags": ["Software Engineering", "Essays", "Classic"],
+                    "price": 28.0
                   }
                 ]
               }
             }
           },
           "401": {
-            "description": "Não autorizado"
+            "description": "Unauthorized"
           }
         }
       }
     },
+
     "/products/{id}": {
       "put": {
-        "summary": "Atualizar um produto",
+        "summary": "Update a product - (Admin)",
         "tags": ["Product"],
         "security": [
           {
@@ -631,7 +645,7 @@
                 "properties": {
                   "name": {
                     "type": "string",
-                    "example": "Produto Atualizado"
+                    "example": "Updated Product"
                   },
                   "price": {
                     "type": "number",
@@ -651,12 +665,12 @@
         },
         "responses": {
           "200": {
-            "description": "Produto atualizado com sucesso",
+            "description": "Product successfully updated",
             "content": {
               "application/json": {
                 "example": {
                   "id": 1,
-                  "name": "Produto Atualizado",
+                  "name": "Updated Product",
                   "price": 149.99,
                   "tags": "tag5,tag6"
                 }
@@ -664,15 +678,15 @@
             }
           },
           "404": {
-            "description": "Produto não encontrado"
+            "description": "Product not found"
           },
           "401": {
-            "description": "Não autorizado"
+            "description": "Unauthorized"
           }
         }
       },
       "delete": {
-        "summary": "Deletar um produto",
+        "summary": "Delete a product - (Admin)",
         "tags": ["Product"],
         "security": [
           {
@@ -692,7 +706,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Produto deletado com sucesso",
+            "description": "Product successfully deleted",
             "content": {
               "application/json": {
                 "example": {
@@ -702,21 +716,16 @@
             }
           },
           "404": {
-            "description": "Produto não encontrado"
+            "description": "Product not found"
           },
           "401": {
-            "description": "Não autorizado"
+            "description": "Unauthorized"
           }
         }
       },
       "get": {
-        "summary": "Obter um produto por ID",
+        "summary": "Get product by ID",
         "tags": ["Product"],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
         "parameters": [
           {
             "name": "id",
@@ -730,12 +739,12 @@
         ],
         "responses": {
           "200": {
-            "description": "Produto encontrado",
+            "description": "Product found",
             "content": {
               "application/json": {
                 "example": {
                   "id": 1,
-                  "name": "Produto Exemplo",
+                  "name": "Sample Product",
                   "price": 99.99,
                   "tags": "tag1,tag2"
                 }
@@ -743,14 +752,12 @@
             }
           },
           "404": {
-            "description": "Produto não encontrado"
-          },
-          "401": {
-            "description": "Não autorizado"
+            "description": "Product not found"
           }
         }
       }
     },
+
     "/cart": {
       "post": {
         "summary": "Add item to cart",
@@ -852,6 +859,7 @@
         }
       }
     },
+
     "/orders": {
       "post": {
         "summary": "Create an order",
@@ -878,6 +886,7 @@
         }
       }
     },
+
     "/orders/{id}": {
       "get": {
         "summary": "Get order by ID",
@@ -927,6 +936,7 @@
         }
       }
     },
+
     "/orders/index": {
       "get": {
         "summary": "List all orders (Admin)",
@@ -948,6 +958,7 @@
         }
       }
     },
+
     "/orders/{id}/status": {
       "get": {
         "summary": "Change order status (Admin)",
